--- a/projects/task_2_timers_basics/Makefile
+++ b/projects/task_2_timers_basics/Makefile
@@ -1,5 +1,5 @@
 BUILD_ROOT=../..
-OBJS = main.o
+OBJS = init.o main.o
 
 BINARY_NAME = main
 
@@ -10,7 +10,10 @@ include $(BUILD_ROOT)/common_defs.mk
 $(BINARY_NAME): $(BINARY_NAME).bin
 
 clean:
-	@rm -f $(OBJS) main.elf main.bin main.elf.map
+	@rm -f $(OBJS) main.elf main.bin main.elf.map init.d init.o main.d main.o
 
 flash: $(BINARY_NAME)
 	$(FLASH_BINARY)
+	$(RESET_MCU)
+
+
