add input capture, TIM3 IC -> res[],  res[] -> USART3 via DMA

--- a/projects/task_4_pwm_input/Makefile
+++ b/projects/task_4_pwm_input/Makefile
@@ -12,6 +12,10 @@ $(BINARY_NAME): $(BINARY_NAME).bin
 clean:
 	@rm -f $(OBJS) main.elf main.bin main.elf.map init.d init.o main.d main.o
 
-flash: $(BINARY_NAME)
+
+flash:  $(BINARY_NAME)
 	$(FLASH_BINARY)
 	$(RESET_MCU)
+
+erase:
+	$(MEMORY_ERASE)
