--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "configurations": [
     {
         "cwd": "${workspaceRoot}",
-        "executable": "${workspaceRoot}\\projects\\task_4_input_capture\\main.elf",
+        "executable": "${workspaceRoot}\\projects\\task_4_pwm_input\\main.elf",
         "name": "Debug with OpenOCD",
         "request": "launch",
         "type": "cortex-debug",
